--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,9 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+.idea/codeStyles/Project.xml
+.idea/inspectionProfiles/Project_Default.xml
