--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 
 buildscript {
+    ext.kotlin_version = '1.2.70'
     repositories {
         mavenCentral()
         google()
@@ -7,5 +8,6 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
